src/objects/Unit_Make__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Unit_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check any makes which have already been added to the pricing page or not.</description>
        <label>Enable Unit Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Unit_Makes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN_Code__c</fullName>
        <label>VIN Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Record Id (18 digits)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_Name_Unique__c</fullName>
        <label>Make Name Unique</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Unit Make</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Make</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Makes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>